--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "https://bazardjamel.onrender.com",
+  "homepage": "http://bazardjamel.onrender.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
